// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App draws and renders drawn cards 1`] = `
<div
  className="App"
>
  <div
    className="left-sidebar"
  >
    <div
      className="deck"
    >
      <div
        className="draw-card card"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <div
          className="card-back"
        >
          <img
            alt="/backimage.png"
            src="/backimage.png"
          />
        </div>
        <div
          className="card-front"
        >
          <img
            alt="/backimage.png"
            src="/backimage.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="drawn-cards"
  >
    <div
      className="card"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="card-back"
      >
        <img
          alt="/backimage.png"
          src="/backimage.png"
        />
      </div>
      <div
        className="card-front"
      >
        <img
          alt="/3"
          src="/3"
        />
      </div>
    </div>
    <div
      className="card"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="card-back"
      >
        <img
          alt="/backimage.png"
          src="/backimage.png"
        />
      </div>
      <div
        className="card-front"
      >
        <img
          alt="/4"
          src="/4"
        />
      </div>
    </div>
  </div>
  <div
    className="right-sidebar"
  >
    <div
      className="diviner-introduction"
    >
      <h2>
        Welcome to Diviner
      </h2>
      <h3>
        "For what we don't know..."
      </h3>
      <p>
        Click on the card to the right to pick a random card from the 
        <a
          href="https://www.wikiwand.com/en/Rider-Waite_tarot_deck"
          target="_blank"
        >
          Rider-Waite Tarot deck
        </a>
        .
      </p>
      <p>
        You can turn over as many cards as you like and if you roll-over any of the turned-over cards you'll see a more in-depth description of the card.
      </p>
    </div>
  </div>
</div>
`;

exports[`App shows detail card if set 1`] = `
<div
  className="App"
>
  <div
    className="left-sidebar"
  >
    <div
      className="deck"
    >
      <div
        className="draw-card card"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <div
          className="card-back"
        >
          <img
            alt="/backimage.png"
            src="/backimage.png"
          />
        </div>
        <div
          className="card-front"
        >
          <img
            alt="/backimage.png"
            src="/backimage.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="drawn-cards"
  />
  <div
    className="right-sidebar"
  >
    <div
      className="card-detail"
    >
      <h1 />
      <p />
      <h2>
        Meaning
      </h2>
      <p />
    </div>
  </div>
</div>
`;
